--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <!-- Site Properties -->
-    <title>Tianxiao (Victoria) Hu's Homepage</title>
+    <title>Chih-Hung (Namo) Lu's Homepage</title>
     <script src="jquery-3.2.1.min.js"></script>
     <script src="semantic/dist/semantic.js"></script>
     <link rel="stylesheet" href="semantic/dist/semantic.css">
@@ -133,8 +133,6 @@
             <div class="seven wide column">
                 <!--<div id="googleMap" style="width: 100%;height: 100%;"></div>-->
                 <img class="ui fluid rounded image" src="images/photo.jpg"/>
-                <label> Photo at Fudan University by
-                    <a href="https://mengxiaolin.me/" target="_blank"> Mengxiao Lin </a> </label>
             </div>
         </div>
         <h3 class="ui header"> Biography: </h3>
