--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <div class="ui container">
             <a href="#" class="header item">
                 <!--<img class="logo" src="images/logo.jpg" style="margin-right: 0.5em">-->
-                Tianxiao Hu
+                Namo Lu
             </a>
             <a href="#biography" class="item">Biography</a>
             <a href="#education" class="item">Education</a>
@@ -103,7 +103,7 @@
 </div>
 <div class="parallax">
     <div id="biography" class="ui hidden segment">
-        <h1 class="ui huge header">Tianxiao (Victoria) Hu
+        <h1 class="ui huge header">Chih-Hung (Namo) Lu
             <div class="sub header">MEng student @UC Berkeley, EECS department.
             </div>
         </h1>
@@ -128,7 +128,7 @@
                 </p>
                 <p><i class="marker icon"></i> Berkeley, CA</p>
                 <p><i class="student icon"></i> UC Berkeley</p>
-                <p><i class="mail icon"></i> <a href="mailto:hutianxiaohtx@gmail.com">hutianxiaohtx@gmail.com</a></p>
+                <p><i class="mail icon"></i> <a href="mailto:mud2man@gmail.com">mud2man@gmail.com</a></p>
             </div>
             <div class="seven wide column">
                 <!--<div id="googleMap" style="width: 100%;height: 100%;"></div>-->
