--- a/index.html
+++ b/index.html
@@ -374,6 +374,9 @@
         </ul>
     </div>
 </div>
+<div>
+<a href="https://www.freepik.com/free-photos-vectors/background">Background vector created by rawpixel.com - www.freepik.com</a>
+</div>
 </body>
 
 </html>
