remove non-use picture

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                     </a>
                 </p>
                 <p><i class="marker icon"></i> Greater Seattle, WA</p>
-                <p><i class="student icon"></i> Amazon Web Service</p>
+                <p><i class="suitcase icon"></i> Amazon Web Service</p>
                 <p><i class="mail icon"></i> <a href="mailto:mud2man@gmail.com">mud2man@gmail.com</a></p>
             </div>
             <div class="seven wide column">
@@ -208,15 +208,7 @@
     <div id="publications" class="ui hidden segment">
         <h2 class="ui header">Publications</h2>
         <h3 class="ui header"> User Data Can Tell Defaulters in P2P Lending.</h3>
-        <p>Jackson J. Mi, <u><strong>Tianxiao Hu</strong></u> and Luke Deer, Conference on Data Science(ICDS'17)(Oral
-            Presentation) & Annals of Data Science(AODS), 2018. <a href="http://rdcu.be/GkQC" target="_blank"> view
-                online </a></p>
-        <p>Online peer-to-peer (P2P) lending service is a new type of financial platforms that enables individuals
-            borrow and lend money directly from one to another. In this paper, we analyzed the differences between
-            credit levels and users’ distribution of CPLP to evaluate if the credit levels can truly reflect the
-            borrowers’ credit. We used soft factors to establish a model that can ﬁnd borrowers who are likely to
-            default. Further, we proposed some strategies to construct and improve the risk-control of P2P lending
-            platforms.</p>
+        <p>Working ... </p>
     </div>
     <div id="projects" class="ui hidden segment">
         <h2 class="ui header">Projects</h2>
@@ -224,10 +216,7 @@
         <!--Kaggle-->
         <!--Kinect Hackathon-->
         <h3 class="ui header"> SmartGomoku: A web version of the Gomoku game with AI agents.</h3>
-        <p><a href="https://en.wikipedia.org/wiki/Gomoku" target="_blank">Gomoku</a>, also called Gobang or Five in a
-            Row. It's usually played on a Go board. Players alternate turns placing a stone of their color on an empty
-            intersection. The winner is the first player to form an unbroken chain of five stones horizontally,
-            vertically, or diagonally.</p>
+        <p>working...</p>
     </div>
 </div>
 <div class="parallax">
