--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 <div class="parallax">
     <div id="biography" class="ui hidden segment">
         <h1 class="ui huge header">Chih-Hung (Namo) Lu
-            <div class="sub header">MEng student @UC Berkeley, EECS department.
+            <div class="sub header">Software Developement Engineer @ Aamzon Web Service
             </div>
         </h1>
         <div class="ui two column stackable grid container">
