--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                     </a>
                 </p>
                 <p><i class="marker icon"></i> Greater Seattle, WA</p>
-                <p><i class="suitcase icon"></i> Amazon Web Service</p>
+                <p><i class="suitcase icon"></i> <a href="https://aws.amazon.com">Amazon Web Service</a></p>
                 <p><i class="mail icon"></i> <a href="mailto:mud2man@gmail.com">mud2man@gmail.com</a></p>
             </div>
             <div class="seven wide column">
