--- a/index.html
+++ b/index.html
@@ -117,6 +117,8 @@
                             class="linkedin black icon large"></i></a>
                     <a href="https://www.facebook.com/profile.php?id=100001517683789" target="_blank"><i
                             class="facebook black icon large"></i></a>
+                    <a href="https://www.instagram.com/mud2man/" target="_blank"><i
+                            class="instagram black icon large"></i></a>
                 </p>
                 <p>
                     <a href="Chih-Hung_Lu_2019.pdf" , target="_blank">
