Change credict for background

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
     </div>
 </div>
 <div>
-<a href="https://www.freepik.com/free-photos-vectors/background">Background vector created by rawpixel.com - www.freepik.com</a>
+<a href="http://www.freepik.com">Designed by Graphictwister / Freepik</a>
 </div>
 </body>
 
