--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
             </div>
         </div>
         <h3 class="ui header"> Biography: </h3>
-        <p> Namo is now working for Amazon Web Service Inc. His team is responsible for developing distributed storage systems 
-            based on the Paxos algorithm under Elastic Block Store service. He also took the master degree in Computer Science 
+        <p> Namo is now working for Amazon Web Service Inc. His team is responsible for developing distributed lock service runing 
+            Paxos algorithm under Elastic Block Store service. He also took the master degree in Computer Science 
             from Columbia University on 2017 December. His major was system track. This track enables students to understand and 
             master classic and current software systems, and provides the fundamentals for later self-study as well as the 
             construction of future software systems. During his first year at Columbia University, he has accomplished several 
