Remove fake section

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             </a>
             <a href="#biography" class="item">Biography</a>
             <a href="#education" class="item">Education</a>
-            <a href="#experiences" class="item">Experiences</a>
+            <a href="#experience" class="item">Experience</a>
             <a href="#publications" class="item">Publications</a>
             <a href="#projects" class="item">Projects</a>
             <a href="#honors" class="item">Honors</a>
@@ -152,79 +152,48 @@
         <h2 class="ui header">Education</h2>
         <h3 class="ui header"> Timeline: </h3>
         <ul class="text">
-            <p class="list"><i class="circle thin icon"></i> Aug 2018 - Present |
-                <a href="https://eecs.berkeley.edu/" target="_blank">EECS M.Eng </a>, <strong>UC Berkeley</strong></p>
+            <p class="list"><i class="circle thin icon"></i> Sep 2016 - Dec 2017 |
+                <a href="https://www.cs.columbia.edu/" target="_blank">MS CS </a>, <strong>Columbia University</strong></p>
         </ul>
         <div class="ui basic accordion">
             <div class="title">
-                <p><i class="dropdown icon"></i> <strong>Click here to view all courses taken in Fudan
+                <p><i class="dropdown icon"></i> <strong>Click here to view all courses taken in Columbia
                     University.</strong></p>
             </div>
             <div class="content">
                 <ul>
-                    <p class="list"><i class="circle thin icon"></i> COMP120006 | Programming</p>
-                    <p class="list"><i class="circle thin icon"></i> COMP120008 | C++ Programming</p>
-                    <p class="list"><i class="circle thin icon"></i> COMP130004 | Data Structure</p>
-                    <p class="list"><i class="circle thin icon"></i> COMP130010 | Introduction to Database Systems</p>
-                    <p class="list"><i class="circle thin icon"></i> COMP130011 | Algorithm Design and Analysis</p>
-                    <p class="list"><i class="circle thin icon"></i> COMP130015 | Software Engineering</p>
-                    <p class="list"><i class="circle thin icon"></i> COMP130017 | Data Communication and Computer
-                        Network</p>
-                    <p class="list"><i class="circle thin icon"></i> COMP130066 | Introduction to Information Security
-                    </p>
-                    <p class="list"><i class="circle thin icon"></i> COMP130067 | Computer Theory and System</p>
-                    <p class="list"><i class="circle thin icon"></i> SOFT130068 | Management Information Systems</p>
-                    <p class="list"><i class="circle thin icon"></i> DATA130007 | Social Network Mining</p>
-                    <p class="list"><i class="circle thin icon"></i> DATA130008 | Introduction to Artificial
-                        Intelligence</p>
-                    <p class="list"><i class="circle thin icon"></i> COMP130110 | Operating Systems</p>
-                    <p class="list"><i class="circle thin icon"></i> COMP130071 | Network Attacks and Countermeasures
-                    </p>
-                    <p class="list"><i class="circle thin icon"></i> COMP130133 | Information System Analysis and Design
-                    </p>
-                    <p class="list"><i class="circle thin icon"></i> COMP130069 | Introduction to Cryptography </p>
-                    <p class="list"><i class="circle thin icon"></i> MATH120016 | Mathematical Analysis</p>
-                    <p class="list"><i class="circle thin icon"></i> COMP120004 | Linear Algebra</p>
-                    <p class="list"><i class="circle thin icon"></i> COMP120005 | Set Theory and Graph Theory</p>
-                    <p class="list"><i class="circle thin icon"></i> COMP130006 | Probability Theory and Mathematical
-                        Statistics</p>
-                    <p class="list"><i class="circle thin icon"></i> COMP130131 | Operations Research</p>
+                    <p>working...</p>
                 </ul>
             </div>
         </div>
-        <p>I also take online courses on Coursera and Youtube.</p>
-        <ul class="text">
-            <p class="list"><i class="circle thin icon"></i> Stanford University | <a
-                    href="https://www.coursera.org/learn/machine-learning/home/welcome"> Machine Learning</a></p>
-            <p class="list"><i class="circle thin icon"></i> deeplearning.ai | <a
-                    href="https://www.coursera.org/learn/neural-networks-deep-learning/home/welcome"> Neural Networks
-                and Deep Learning</a></p>
-            <p class="list"><i class="circle thin icon"></i> Stanford University | <a
-                    href="https://www.youtube.com/playlist?list=PL3FW7Lu3i5JvHM8ljYj-zLfQRF3EO8sYv"> Convolutional
-                Neural Networks for Visual Recognition</a> (in progress)</p>
-        </ul>
         <h3 class="ui header">Skills:</h3>
         <ul class="text">
-            <p class="list"><i class="circle thin icon"></i> <strong>Programming Languages:</strong> Proficient in
-                Python/C++/HTML/CSS/JavaScript, experienced in C/Java/R/Matlab </p>
-            <p class="list"><i class="circle thin icon"></i> <strong>Operating Systems:</strong> Windows / Unix </p>
-            <p class="list"><i class="circle thin icon"></i> <strong>Languages:</strong> Native in Mandarin Chinese,
-                fluent in English</p>
+            <p>working...</p>
+        </ul>
+    </div>
+</div>
+<div class="parallax">
+    <div id="experience" class="ui hidden segment">
+        <h2 class="ui header">Experience</h2>
+        <h3 class="ui header"> Timeline: </h3>
+        <ul class="text">
+            <p class="list"><i class="circle thin icon"></i> Mar 2018 - Mar 2020 |
+                <a href="https://aws.amazon.com" target="_blank">Software Development Engineer </a>, <strong>AWS</strong></p>
         </ul>
     </div>
 </div>
 <div class="parallax">
     <div id="publications" class="ui hidden segment">
         <h2 class="ui header">Publications</h2>
-        <h3 class="ui header"> User Data Can Tell Defaulters in P2P Lending.</h3>
-        <p>Working ... </p>
+        <h3 class="ui header"> Delay Optimal Compressor Tree</h3>
+        <p>working ... </p>
     </div>
     <div id="projects" class="ui hidden segment">
         <h2 class="ui header">Projects</h2>
         <!--TODO-->
         <!--Kaggle-->
         <!--Kinect Hackathon-->
-        <h3 class="ui header"> SmartGomoku: A web version of the Gomoku game with AI agents.</h3>
+        <h3 class="ui header"> Mutable replay</h3>
         <p>working...</p>
     </div>
 </div>
@@ -232,8 +201,7 @@
     <div id="honors" class="ui hidden segment">
         <h2 class="ui header">Honors</h2>
         <ul class="text">
-            <p class="list"><i class="circle thin icon"></i> May 2018| <strong>Outstanding Graduate of Fudan University
-                (10%)</strong></p>
+            <p class="list"><i class="circle thin icon"></i> working</strong></p>
         </ul>
     </div>
 </div>
